# batnag

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac  main.c
src/: main.c  mod-libnotify.c  mod-nagbar.c  nagbar.c  nagbar.h
